statum-macros/tests/ui/invalid_machine_not_struct.stderr
error: expected `struct`
 --> tests/ui/invalid_machine_not_struct.rs:8:1
  |
8 | enum NotAStruct {
  | ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_not_struct.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_not_struct.rs`
